tests/baselines/reference/privateNameInObjectLiteral-3.errors.txt
privateNameInObjectLiteral-3.ts(2,9): error TS18016: Private identifiers are not allowed outside class bodies.
privateNameInObjectLiteral-3.ts(2,9): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.


==== privateNameInObjectLiteral-3.ts (2 errors) ====
    const obj = {
        get #foo() {
            ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
            ~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
            return ""
        }
    };
    